--- a/mapier.html
+++ b/mapier.html
@@ -21393,14 +21393,17 @@ const make_bottom_pane = make_ui("map-bottom-pane", function(element, {
       view.setCenter([x2, y2]);
     }
   });
-  map.on("moveend", function on_move_end() {
-    const [x2, y2] = view.getCenter();
+  function update_coords(event) {
+    const [x2, y2] = event.coordinate;
     coords_ui.update_coordinates(x2, y2);
-  });
-  map.un("moveend", function remove_move_end() {
-    coords_ui.clear_coordinates();
-  });
+  }
+  map.on("pointermove", update_coords);
   shadow.append(coords_ui);
+  return {
+    disconnect() {
+      map.un("pointermove", update_coords);
+    }
+  };
 });
 const make_bottom_pane$1 = Object.freeze(make_bottom_pane);
 const background_switcher = make_ui(
@@ -21484,7 +21487,8 @@ const app = make_ui("main-app", function(element) {
   element.mount = mount;
   return element;
 });
-app().mount("#root");
+const app$1 = Object.freeze(app);
+app$1().mount("#root");
 </script>
                 <script type="application/json" data-app="store">{"components":[{"id":"background_switcher","map_refs":["background_switcher_map_1","background_switcher_map_2"]},{"id":"map","map_refs":["main_map"]}],"controls":[{"id":"map_controls_1","attribution":false,"attributionOptions":false,"rotate":false,"rotateOptions":false,"zoom":false,"zoomOptions":false}],"layers":[{"id":"osm","source":{"type":"osm"},"type":"tile_layer"},{"id":"thunder_forest","source":{"type":"image_tile","url":"https://{a-c}.tile.thunderforest.com/cycle/{z}/{x}/{y}.png?apikey=0e6fc415256d4fbb9b5166a718591d71"},"type":"tile_layer"}],"maps":[{"active_layer":"osm","active_view":"map","control_refs":["map_controls_1"],"id":"main_map","layer_refs":["osm","thunder_forest"],"view_refs":["map"]},{"active_layer":"osm","active_view":"map","control_refs":["map_controls_1"],"id":"background_switcher_map_1","layer_refs":["osm"],"view_refs":["map"]},{"active_view":"map","active_layer":"thunder_forest","control_refs":["map_controls_1"],"id":"background_switcher_map_2","layer_refs":["thunder_forest"],"view_refs":["map"]}],"views":[{"center":[0,0],"id":"map","zoom":2}]}</script>
             </body>
